# stock_analyzer

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  Makefile  QUICK_START.md  README.md  deploy.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.github/workflows/: ci.yml  claude.yml  deploy-to-raspi.yml
api/: main.py
api/routers/: analysis.py  stocks.py
backend/: .dockerignore  Dockerfile  MIGRATIONS.md  alembic.ini  docker-entrypoint.sh  mypy.ini  pyproject.toml  pyrightconfig.json  run_batch.py  run_daily_batch.py  run_jpx_batch.py
backend/alembic/: env.py
backend/alembic/versions/: 0793f075e201_add_portfolio_tables.py  2bc56d7af600_add_users_and_invites.py  4bafb7a599d9_add_deposit_withdraw_transaction_feature.py  4bafb7a599d9_入金_出金トランザクション機能を追加.py  9f55488740f8_initial_migration.py
backend/api/: main.py
backend/api/dependencies/: __init__.py  auth.py  db.py
backend/api/routers/: admin.py  analysis.py  auth.py  candidates.py  companies.py  portfolios.py  stocks.py  users.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0793f075e201_add_portfolio_tables.py  2bc56d7af600_add_users_and_invites.py  4bafb7a599d9_add_deposit_withdraw_transaction_feature.py  9f55488740f8_initial_migration.py  d4dae558d760_add_ai_stock_analyses_table.py
backend/app/api/: main.py
backend/app/api/dependencies/: auth.py  db.py
backend/app/api/routers/: admin.py  ai_analysis.py  analysis.py  auth.py  candidates.py  companies.py  portfolios.py  stocks.py  users.py
backend/app/api/schemas/: __init__.py  ai_analysis.py
backend/app/batch/: jpx_importer.py  stock_updater.py
backend/app/config/: constants.py  logging_config.py  models.py  settings.py
backend/app/database/: database_manager.py  models.py  session.py  types.py
backend/app/services/: ai_stock_analysis_service.py  claude_service.py
backend/app/services/analysis/: technical_analyzer.py  technical_analyzer_service.py
backend/app/services/data/: data_collector.py  stock_data_service.py
backend/app/services/filtering/: company_filter.py  company_filter_service.py
backend/app/services/jpx/: jpx_file_parse_service.py  jpx_service.py
backend/app/services/market_data/: market_data_service.py
backend/app/services/portfolio/: __init__.py  portfolio_service.py  position_service.py
backend/app/shared/database/: database_manager.py  session.py
backend/app/shared/utils/: jpx_parser.py  symbol_utils.py
backend/app/utils/: determine_enterprise.py  jpx_parser.py  market_analyzer.py  numeric_utils.py  price_indicators.py  security.py
backend/batch/: batch_runner.py  company_filter.py  data_collector.py  jpx_importer.py  stock_analyzer_cli.py  stock_updater.py  technical_analyzer.py  test_yifinalnce.py
backend/cron/: README.md  run-jpx-importer.sh  run-stock-updater.sh
backend/scripts/: seed_user.py
backend/services/analysis/: technical_analyzer.py
backend/services/data/: data_collector.py  stock_data_service.py
backend/services/filtering/: company_filter.py  company_filter_service.py
backend/services/jpx/: jpx_service.py
backend/services/portfolio/: portfolio_service.py  position_service.py
backend/shared/config/: logging_config.py  models.py  settings.py
backend/shared/database/: database_manager.py  models.py  session.py
backend/shared/jpx/: jpx_parser.py
backend/shared/utils/: jpx_parser.py  market_analyzer.py  security.py  symbol_filter.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_portfolios.py
backend/tests/services/: test_company_filter_service.py  test_placeholder.py  test_portfolio_service.py
backend/tests/shared/: test_security.py
backend/tests/utils/: test_numeric.py  test_symbol.py
batch/: company_filter.py  data_collector.py  run_batch.py  technical_analyzer.py
config/: settings.py
database/: database_manager.py  models.py
deploy/: README.md  stock-deploy-webhook.service  webhook_server.py
docs/: DEPLOYMENT.md
front/: package-lock.json
front/src/: App.css  App.tsx
front/src/components/: Layout.css
front/src/services/: api.ts
front/src/types/: stock.ts
frontend/: Dockerfile  app.py  biome.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: Layout.css  Layout.tsx
frontend/src/components/portfolio/: BuyModal.tsx  SellModal.tsx
frontend/src/components/stock/: AIAnalysisModal.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useModal.ts
frontend/src/pages/: Admin.tsx  Analysis.tsx  Candidates.tsx  Dashboard.tsx  Login.tsx  MyPage.tsx  Portfolio.tsx  PortfolioDetail.tsx  Register.tsx  StockDetail.tsx  StockList.tsx  Transactions.tsx
frontend/src/services/: api.ts
frontend/src/types/: auth.ts  error.ts  portfolio.ts  stock.ts
frontend/src/utils/: stockUtils.ts
scripts/: .env.example  deploy.sh  seed_admin.py  seed_user.py  setup-raspi-env.sh  setup-raspi-runner.sh  sync-db-from-prod.sh
setup/: README.md  cron-setup.md  migrate-db-to-prod.sh  stock-deploy-webhook.service  webhook_server.py
tools/: sync-db-from-prod.sh
utils/: jpx_parser.py  market_analyzer.py  symbol_filter.py
