[project]
name = "stock-analyzer"
version = "1.0.0"
description = "日本株から投資候補を効率的に抽出するシステム"
authors = [
    { name = "Stock Analyzer Team", email = "team@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "pandas>=1.5.0",
    "yfinance>=0.2.0",
    "requests>=2.28.0",
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
    "matplotlib>=3.5.0",
    "schedule>=1.2.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
stock-analyzer = "batch.run_batch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["batch", "database", "config", "utils", "frontend"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"