[project]
name = "stock-analyzer-backend"
version = "1.0.0"
description = "日本株から投資候補を効率的に抽出するシステム"
authors = [
    { name = "Stock Analyzer Team", email = "team@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "pandas>=1.5.0",
    "yfinance>=0.2.0",
    "requests>=2.28.0",
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
    "matplotlib>=3.5.0",
    "schedule>=1.2.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "numpy>=1.21.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "click-log>=0.4.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "itsdangerous>=2.1.2",
    "bcrypt>=4.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
stock-analyzer = "batch.stock_analyzer_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["batch", "shared", "services", "api"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.lint.per-file-ignores]
# FastAPI の依存性注入は引数デフォルトに Depends(...) を書くのが定形のため B008 を除外
"api/routers/*.py" = ["B008"]
"api/dependencies/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "yfinance", "yfinance.*", "fastapi.*", "alembic", "alembic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pandas-stubs>=2.2.2.240807",
    "ruff>=0.13.0",
    "types-click-log>=0.4.0.20250413",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.6",
    "pyright>=1.1.389",
]
